--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
     <div id="overlay"></div>
 
     <div class="content">
-        <h1>SERVER LOADING</h1>
-        <h2>Please wait while we prepare your session</h2>
+        <h1>LOADING</h1>
+        <h2>Welcome to Crows ZCity! Have a great time and make sure to join our discord!</h2>
 
         <div class="status-box">
             <div id="status-text">Connecting to server...</div>
