--- a/index.html
+++ b/index.html
@@ -83,10 +83,11 @@
 
         .content {
             position: absolute;
-            bottom: 50px;
-            right: 50px;
-            width: 500px;
-            text-align: left;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 600px;
+            text-align: center;
             z-index: 10;
         }
 
@@ -116,6 +117,7 @@
             border: 2px solid #ff7300;
             box-shadow: 0 0 20px rgba(255, 115, 0, 0.2);
             position: relative;
+            text-align: center;
         }
 
         /* Decorative corner squares */
