--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         <div class="status-box">
             <div id="status-text">Connecting to server...</div>
-            <div id="file-text">Initializing...</div>
+            <div id="file-text"></div>
             
             <!-- Indeterminate Scanner Bar -->
             <div class="scanner-container">
@@ -245,7 +245,7 @@
             
             <!-- Removed Percentage, keeping a simple count or status message if needed -->
             <div class="stats">
-                <span id="files-count">SYSTEM READY</span>
+                <span id="files-count"></span>
             </div>
         </div>
     </div>
@@ -255,7 +255,8 @@
         const backgroundImages = [
             "imag1.png",
             "imag2.png",
-            "imag3.png"
+            "imag3.png",
+            "image.png"
         ];
         const slideDuration = 6000; // ms per slide
         const fadeDuration = 1500; // ms for fade transition
