--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             "imag1.png",
             "imag2.png",
             "imag3.png",
-            "image.png"
+            "image5.png"
         ];
         const slideDuration = 6000; // ms per slide
         const fadeDuration = 1500; // ms for fade transition
