--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
     <script>
         // Configuration
         const backgroundImages = [
-            "imag1.png",
-            "imag2.png",
-            "imag3.png",
-            "image5.png"
+          "./imag1.png",
+          "./imag2.png",
+          "./imag3.png",
+          "./image5.png"
         ];
         const slideDuration = 6000; // ms per slide
         const fadeDuration = 1500; // ms for fade transition
