--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
     <script>
         // Configuration
         const backgroundImages = [
-          "./imag1",
-          "./imag2",
-          "./imag3",
-          "./image5"
+          "imag1",
+          "imag2",
+          "imag3",
+          "image5"
         ];
         const slideDuration = 6000; // ms per slide
         const fadeDuration = 1500; // ms for fade transition
