--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
     <div class="content">
         <h1 id="title-text"></h1>
-        <h2>Please wait while we prepare your session</h2>
+        <h2>We hope you have a great time, Join the discord!</h2>
 
         <div class="status-box">
             <div id="status-text">Connecting to server...</div>
